syntax = "proto3";

package storage;

option go_package = "github.com/yahn1ukov/scribble/libs/grpc/storage";

import "google/protobuf/empty.proto";

message UploadFileRequest {
    string name = 1;
    int64 size = 2;
    string content_type = 3;
    string note_id = 4;
    bytes content = 5;
}

service StorageService {
    rpc Upload(stream UploadFileRequest) returns (google.protobuf.Empty);
}
